web: fixed logo div width (was wrapping on some browsers).

--- a/web/public/css/main.css
+++ b/web/public/css/main.css
@@ -145,7 +145,7 @@ div.home div.title {
 }
 
 div.title div.logo {
-  width: 168px;
+  width: 15em;
 }
 
 div.title div.logo h1 {
